--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,10 @@
-[galaxy]
-server_list = https://galaxy.ansible.com
+[defaults]
+roles_path = roles/
 
-[galaxy_server]
-url=https://galaxy.ansible.com
-token=4aedf5fcb74f30ced0716773d0f450e40bc4ea98
+[galaxy]
+server_list = galaxy.ansible.com
+#token = 5c870dd16cb346dbe993b43a53686f2b99a7e389
+
+[galaxy_server.galaxy.ansible.com]
+url=http://galaxy.ansible.com
+token=5c870dd16cb346dbe993b43a53686f2b99a7e389
