--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,9 +2,9 @@
 roles_path = roles/
 
 [galaxy]
-server_list = galaxy
+server_list = https://galaxy.ansible.com
 #token = 5c870dd16cb346dbe993b43a53686f2b99a7e389
 
-[galaxy_server.galaxy]
+[galaxy_server.https://galaxy.ansible.com]
 url=http://galaxy.ansible.com
 token=5c870dd16cb346dbe993b43a53686f2b99a7e389
