--- a/ansible.cfg
+++ b/ansible.cfg
@@ -6,5 +6,5 @@ server_list = https://galaxy.ansible.com
 #token = 5c870dd16cb346dbe993b43a53686f2b99a7e389
 
 [galaxy_server.https://galaxy.ansible.com]
-url=https://galaxy.ansible.com
-token=5c870dd16cb346dbe993b43a53686f2b99a7e389
+url = https://galaxy.ansible.com
+token = 5c870dd16cb346dbe993b43a53686f2b99a7e389
