--- a/meta/main.yml
+++ b/meta/main.yml
@@ -22,4 +22,6 @@ galaxy_info:
     - name: Ubuntu
       versions:
         - all
-dependencies: []
+dependencies: 
+    - role: geerlingguy.apache
+      version: 3.3.0
