--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
   role_name: testing_10
   author: aws
-  description: asdfh
+  description: Testing tags
   company: asf
   issue_tracker_url: github.com
   license: mit
