--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,5 @@
 galaxy_info:
-  role_name: testing_10
+  role_name: testing_11
   author: aws
   description: Testing tags
   company: asf
@@ -22,4 +22,6 @@ galaxy_info:
     - name: Ubuntu
       versions:
         - all
-dependencies: []
+dependencies: 
+    - role: geerlingguy.java
+      version: 3.3.0
