--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,4 +1,7 @@
-   
+dependencies: 
+  - geerlingguy.ansible
+    
+    
 galaxy_info:
   role_name: testing_12
   author: aws
@@ -23,7 +26,3 @@ galaxy_info:
     - tag1
     - tag2
     - tag3
-dependencies: 
-  - role: geerlingguy.ansible
-  - role: AerisCloud.yum
-  
