--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,10 +1,10 @@
 dependencies: 
-  - geerlingguy.ansible
-  - geerlingguy.java 
+  - geerlingguy.ansible: 3.3.0
+  - geerlingguy.java: 2.1.0
     
     
 galaxy_info:
-  role_name: testing_13
+  role_name: testing_14
   author: aws
   description: Testing tags
   company: asf
